--- a/TeamProject/Views/Courts/Index.cshtml
+++ b/TeamProject/Views/Courts/Index.cshtml
@@ -4,54 +4,24 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Branch.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ImageCourt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MaxPlayers)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th></th>
-    </tr>
+<br />
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Branch.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ImageCourt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MaxPlayers)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+@foreach (var court in Model)
+        {
+            <div class="card mb-3 rounded rounded-lg border border-success d-flex p-2 bd-highlight d-flex">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="@court.ImageCourt" class="card-img" alt="@court.Name">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body align-content-end flex-column">
+                            <h5 class="card-title">@court.Name</h5>
+                            <p class="card-text">@court.Review</p>
+                            <a href="/bookings/index" class="btn btn-success btn-lg active mt-auto" role="button" aria-pressed="true">Book Now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
 
-</table>
