--- a/TeamProject/Views/Branches/Create.cshtml
+++ b/TeamProject/Views/Branches/Create.cshtml
@@ -34,7 +34,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Longitude, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Longitude, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.Longitude, new { htmlAttributes = new { @class = "form-control" } })*@
+                <input class="form-control text-box single-line" data-val="true" id="Longitude" name="Longitude" type="text" value="" />
                 @Html.ValidationMessageFor(model => model.Longitude, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,7 +43,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Latitude, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Latitude, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.Latitude, new { htmlAttributes = new { @class = "form-control" } })*@
+                <input class="form-control text-box single-line" data-val="true" id="Latitude" name="Latitude" type="text" value="" />
                 @Html.ValidationMessageFor(model => model.Latitude, "", new { @class = "text-danger" })
             </div>
         </div>
