--- a/TeamProject/Views/Courts/Edit.cshtml
+++ b/TeamProject/Views/Courts/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Court</h4>
         <hr />
@@ -53,7 +53,7 @@
             @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Price,"", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -64,7 +64,10 @@
         </div>
     </div>
 }
-
+@{
+    var frameLink = "/TimeSlots/Index/" + Model.Id;
+}
+<iframe src=@frameLink  style="height:200px;width:800px;"></iframe>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
