--- a/TeamProject/Views/TimeSlots/Index.cshtml
+++ b/TeamProject/Views/TimeSlots/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", new { id = ViewBag.id } )
 </p>
 <table class="table">
     <tr>
