--- a/TeamProject/Views/Shared/_LoginPartial.cshtml
+++ b/TeamProject/Views/Shared/_LoginPartial.cshtml
@@ -16,6 +16,6 @@ else
 {*@
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">@Html.ActionLink("Register", "Create", "Users", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })</li>
-        <li class="nav-item">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
+        <li class="nav-item">@Html.ActionLink("Log in", "Login", "Login", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
     </ul>
   @*}*@
