--- a/TeamProject/Views/Courts/Book.cshtml
+++ b/TeamProject/Views/Courts/Book.cshtml
@@ -30,21 +30,22 @@
         </div>
         <div id="data-container"></div>
 
-        <div class="modal" tabindex="-1" role="dialog">
+        <!-- Modal -->
+        <div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Confirm booking</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Confirm Booking</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Please confirm book details:</p>
+                        <p>Please Confirm Booking Info</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary">Confirm</button>
+                        <button id="confirm-booking" type="button" class="btn btn-primary">Confirm</button>
                     </div>
                 </div>
             </div>
@@ -58,6 +59,10 @@
     <script>
 
         $(document).ready(function () {
+            $('#test-modal').click(function () {
+                $('#confirm-modal').modal('show');
+            })
+            
             const $container = $('#data-container'),
                 timeslotDate = TimeslotDate(refreshTimeslotsTable),
                 $courtTitle=$('#court-title'),
@@ -107,12 +112,13 @@
                         $courtTitle.text($courtItem.text());
                     }
                 }
+            let bookingData;
 
             $('#next-week-btn').on('click', timeslotDate.goNextWeek);
             $('#prev-week-btn').on('click', timeslotDate.goPrevWeek);
             $('#data-container').on('click', '.timeslot div[value="1"]', onTimeslotClick);
             $('nav').on('click', 'li', onNavCourtClick);
-
+            $('#confirm-booking').on('click', onBookingConfirm);
             utils.setActiveCourt(@Model.CourtId);
 
             // update period date title
@@ -148,17 +154,24 @@
                     day = $(this).attr('day'),
                     dateTime = timeslotDate.getSelectedDate(parseInt(day, 10), getHour(hour));
 
-                let data = {
+                bookingData = {
                     courtId: utils.getSelectedCourtId(),
                     bookedAt: dateTime.utc().format()
                 };
+
+                $('#confirm-modal').modal('show');
+
+            }
+
+            function onBookingConfirm() {
+                $('#confirm-modal').modal('hide');
 
                 $.ajax({
                     url: '/api/book/',
                     type: "POST",
                     accepts: "application/json",
                     contentType: "application/json",
-                    data: JSON.stringify(data),
+                    data: JSON.stringify(bookingData),
                     success: function (result) {
                         if (result.Status === "Ok") {
                             console.log("Ok");
@@ -170,7 +183,6 @@
                     }
                 });
             }
-
             // on court click (sidebar navigation)
             // sets clicked court item active
             function onNavCourtClick() {
